@@ -12,6 +12,8 @@ each feature.
 Current Beta (not yet released)
 -------------------------------
 
+    - Another bugfix for the handling of EXCEPT statements [TE].
+    - Fixed some crashes on bad syntax in the configuration file. [TE]
     - Fix: Month field was set one too high (0 = January, but CFRoute 
       wrote 1 for January, and so forth) [TE]
     - Fixed a crash when trying to route intransit mail without VIA
